--- a/todoApp/www/templates/login.html
+++ b/todoApp/www/templates/login.html
@@ -19,6 +19,10 @@
             <ion-button class="button button-block button-positive" ng-click="login(user)">
                 Login
             </ion-button>
+            <ion-button class="button button-block button-positive" ng-click="loginFB()">
+                Login with Facebook
+            </ion-button>
         </ion-list>
     </div>
+    
 </ion-content>
